--- a/todo.txt
+++ b/todo.txt
@@ -84,6 +84,7 @@ Known issues
 
 Form diff script aanpassen check op parameter instellingen (laatste waarde)
 Medische status import scripts aanpassen
+Copy functie voor de gehele afspraken tekst (voor invoer in HIX).
 
 Planning formulier:
 - Check op max knopnaam lengte van 60 tekens bij aanmaken nieuwe knopnaam
